<resources>

    <string name="title_mens">Men\'s</string>
    <string name="title_womens">Women\'s</string>
    <string name="title_mens_rugby_rankings">Men\'s Rugby Rankings</string>
    <string name="title_womens_rugby_rankings">Women\'s Rugby Rankings</string>
    <string name="title_rankings">Rankings</string>
    <string name="title_fixtures">Fixtures</string>
    <string name="title_results">Results</string>
    <string name="title_add_match_prediction">Add match prediction</string>
    <string name="title_edit_match_prediction">Edit match prediction</string>

    <string name="subtitle_last_updated_by_world_rugby">Last updated by World Rugby: %s</string>
    <plurals name="subtitle_predicting_matches">
        <item quantity="one">Predicting %d match</item>
        <item quantity="other">Predicting %d matches</item>
    </plurals>

    <string name="button_clear">Clear</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_predict">Predict</string>

    <string name="hint_home_team">Home team</string>
    <string name="hint_away_team">Away team</string>
    <string name="hint_points">Points</string>

    <string name="check_box_rugby_world_cup">Rugby World Cup</string>
    <string name="check_box_no_home_advantage">No home advantage (neutral venue)</string>

    <string name="ranking_previous_position_up" translatable="false">(↑%d)</string>
    <string name="ranking_previous_position_down" translatable="false">(↓%d)</string>
    <string name="ranking_points_difference_positive" translatable="false">(+%s)</string>
    <string name="ranking_points_difference_negative" translatable="false">(−%s)</string>

    <string name="chip_match_prediction" translatable="false">%1$s %2$d - %3$d %4$s</string>

    <string name="menu_item_team" translatable="false">%1$s %2$s</string>

    <string name="tooltip_add_match_prediction">Add match prediction</string>

    <string name="snackbar_fetching_world_rugby_rankings">Fetching World Rugby Rankings&#8230;</string>
    <string name="snackbar_failed_to_refresh_world_rugby_rankings">Failed to refresh World Rugby Rankings</string>
    <string name="snackbar_fetching_world_rugby_matches">Fetching World Rugby Matches&#8230;</string>
    <string name="snackbar_failed_to_refresh_world_rugby_matches">Failed to refresh World Rugby Matches</string>

    <string name="content_description_add_match_prediction">Add match prediction</string>
    <string name="content_description_reset_matches">Reset matches</string>
    <string name="content_description_close">Close</string>

    <string name="text_match_teams" translatable="false">%1$s \u0020%2$s \u0020- \u0020%3$s \u0020%4$s</string>
    <string name="text_match_teams_with_scores" translatable="false">%1$s \u0020%2$s \u0020%3$d \u0020- \u0020%4$d \u0020%5$s \u0020%6$s</string>
    <string name="text_match_venue_country" translatable="false">%1$s, %2$s</string>

</resources>
