<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_half"
    android:elevation="@dimen/elevation_bottom_sheet"
    android:background="@drawable/bg_bottom_sheet"
    android:clickable="true"
    android:focusable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/height_peek"
    app:behavior_skipCollapsed="true"
    tools:background="@null">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/addEditMatchPeekGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/height_peek" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/spacing_double" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/spacing_double" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                style="@style/RugbyRankerMaterialButton.TextButton.DoublePadding"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/addEditMatchPeekGuideline"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/addOrEditMatchTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_add_match_prediction"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/addEditMatchPeekGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:tint="@color/dark_grey"
                android:paddingStart="@dimen/padding_horizontal_close"
                android:paddingEnd="@dimen/padding_horizontal_close"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/content_description_close"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/addEditMatchPeekGuideline"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/homeTeamTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:hint="@string/hint_home_team"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/addEditMatchPeekGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintEnd_toStartOf="@id/homePointsTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/homeTeamEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_color_control_normal_24dp"
                    android:drawablePadding="@dimen/spacing_standard" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/homePointsTextInputLayout"
                android:layout_width="@dimen/width_points"
                android:layout_height="0dp"
                android:hint="@string/hint_points"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toTopOf="@id/homeTeamTextInputLayout"
                app:layout_constraintBottom_toBottomOf="@id/homeTeamTextInputLayout"
                app:layout_constraintEnd_toEndOf="@id/endGuideline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/homePointsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="@integer/max_length_points" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/awayTeamTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:hint="@string/hint_away_team"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/homeTeamTextInputLayout"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintEnd_toStartOf="@id/awayPointsTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/awayTeamEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_color_control_normal_24dp"
                    android:drawablePadding="@dimen/spacing_standard" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/awayPointsTextInputLayout"
                android:layout_width="@dimen/width_points"
                android:layout_height="0dp"
                android:hint="@string/hint_points"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toTopOf="@id/awayTeamTextInputLayout"
                app:layout_constraintBottom_toBottomOf="@id/awayTeamTextInputLayout"
                app:layout_constraintEnd_toEndOf="@id/endGuideline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/awayPointsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="@integer/max_length_points" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/rwcCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_rugby_world_cup"
                app:layout_constraintTop_toTopOf="@id/nhaCheckBox"
                app:layout_constraintBottom_toBottomOf="@id/nhaCheckBox"
                app:layout_constraintStart_toStartOf="@id/startGuideline" />

            <CheckBox
                android:id="@+id/nhaCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginStart="@dimen/spacing_standard"
                android:text="@string/check_box_no_home_advantage"
                app:layout_constraintTop_toBottomOf="@id/awayTeamTextInputLayout"
                app:layout_constraintStart_toEndOf="@id/rwcCheckBox"
                app:layout_constraintEnd_toEndOf="@id/endGuideline" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addOrEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginBottom="@dimen/spacing_double"
                android:text="@string/button_add"
                app:layout_constraintTop_toBottomOf="@id/nhaCheckBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/matchesPeekGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/height_peek" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/matchesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:requiresFadingEdge="horizontal"
        android:fadingEdgeLength="@dimen/length_fading_edge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/matchesPeekGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addMatchButton"
        tools:listitem="@layout/list_item_match_result" />

    <ImageButton
        android:id="@+id/addMatchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_match_black_24dp"
        android:tint="@color/dark_grey"
        android:paddingStart="@dimen/padding_horizontal_add_match"
        android:paddingEnd="@dimen/padding_horizontal_add_match"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_description_reset_matches"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/matchesPeekGuideline"
        app:layout_constraintStart_toEndOf="@id/matchesRecyclerView"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
